<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<VideoView
    android:id="@+id/video2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    />

 <Button
     android:id="@+id/findJob"
     android:layout_width="156dp"
     android:layout_height="47dp"
     android:text="@string/find_a_job"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.065"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.874" />

 <Button
     android:id="@+id/postJob"
     android:layout_width="156dp"
     android:layout_height="47dp"
     android:text="@string/post_a_job"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.933"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.976" />

 <TextView
     android:layout_width="203dp"
     android:layout_height="86dp"
     android:text="@string/welcome"
     android:textSize="30sp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.653"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.083" />


</androidx.constraintlayout.widget.ConstraintLayout>